--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <title>Circles Game</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="circles.css">
+  <style>
+    @font-face {
+      font-family: 'circles';
+      src: url('./circles.ttf') format('truetype');
+    }
+  </style>
 </head>
 <body>
   <p id="health">10</p>
