--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
   <p id="health">10</p>
   <p id="score">0</p>
   <p id="level">1</p>
+  <button id="violetButton" onclick="VioletCirclePress()">V</button>
+  <button id="superLineButton" onclick="superLinePress()">S</button>
   <h1 id="bossHealth">10</h1>
-    <div class="redLine"></div>
+  <div class="redLine"></div>
 
   <button id="startButton">Start</button>
 
@@ -31,6 +33,7 @@
   <script src="orange-circle.js"></script>
   <script src="pink-circle.js"></script>
   <script src="gray-circle.js"></script>
+  <script src="cyan-circle.js"></script>
   <script src="yellow-circle.js"></script>
   <script src="yellow-impostor-circle.js"></script>
   <script src="red-circle.js"></script>
