--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
   <p id="health">10</p>
   <p id="score">0</p>
   <p id="level">1</p>
-  <button id="violetButton" onclick="VioletCirclePress()">V</button>
+  <button id="violetButton" onclick="violetCirclePress()">V</button>
   <button id="superLineButton" onclick="superLinePress()">S</button>
+  <button id="pinkButton" onclick="pinkCirclePress()">P</button>
   <h1 id="bossHealth">10</h1>
   <div class="redLine"></div>
 
